Fix horizontal scroll

--- a/src/Styles/ControloAvifaunaStyles.scss
+++ b/src/Styles/ControloAvifaunaStyles.scss
@@ -9,7 +9,7 @@ $cream: #f5f5dc;
   background-size: cover;
   padding: 2rem;
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
   overflow: hidden;
 
   h2{
