--- a/src/Styles/EventosStyles.scss
+++ b/src/Styles/EventosStyles.scss
@@ -11,7 +11,7 @@ $cream: #f5f5dc;
   background-size: cover;
   padding: 2rem;
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
   overflow: hidden;
 
 
